--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ cache:
   directories:
     - node_modules
 script:
+  - npm install
   - npm run build
-git:
-  depth: 3
 deploy:
   provider: pages
   skip-cleanup: true
